odoo/kustomize-bojkot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-bojkot
  labels:
    app: odoo-bojkot
spec:
  type: ClusterIP
  ports:
    - port: 8069
      targetPort: 8069
  selector:
    app: odoo-bojkot
