odoo/kustomize-bojkot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-bojkot
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bojkot.si
        - www.bojkot.si
      secretName: bojkot-tls
  rules:
    - host: bojkot.si
      http: &http_paths
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: odoo-bojkot
                port:
                  number: 8069
    - host: www.bojkot.si
      http: *http_paths
